[gd_scene load_steps=4 format=2]

[ext_resource path="res://Src/HUD/MissionProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/MagoFont3_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Src/HUD/MissionProgress.gd" type="Script" id=3]

[node name="MissionProgress" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionProgressBar" parent="." instance=ExtResource( 1 )]
margin_left = 168.0
margin_top = 320.0
margin_right = 552.0
margin_bottom = 336.0
nation = 1

[node name="Label" type="Label" parent="MissionProgressBar"]
margin_left = -56.0
margin_right = -16.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "USSR"

[node name="MissionProgressBar2" parent="." instance=ExtResource( 1 )]
margin_left = 168.0
margin_top = 288.0
margin_right = 552.0
margin_bottom = 304.0
nation = 2

[node name="Label" type="Label" parent="MissionProgressBar2"]
margin_left = -56.0
margin_right = -16.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Ustria"

[node name="MissionProgressBar3" parent="." instance=ExtResource( 1 )]
margin_left = 168.0
margin_top = 256.0
margin_right = 552.0
margin_bottom = 272.0

[node name="Label" type="Label" parent="MissionProgressBar3"]
margin_left = -56.0
margin_right = -16.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "USA"

[node name="Button" type="Button" parent="."]
margin_left = 264.0
margin_top = 216.0
margin_right = 302.0
margin_bottom = 236.0
text = "Play"
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
